--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
       </div>
       <ul>
         <li>
-          <a href="#">Portfólio</a>
+          <a
+            href="https://drive.google.com/file/d/1TGc5R-0K0XADtM6wrnwUBzTYUgHJX0xb/view?usp=sharing"
+            >Currículo</a
+          >
         </li>
         <li>
-          <a href="#">Currículo</a>
+          <a href="https://alinesimoncello.github.io/cadastro/">Projeto 01</a>
         </li>
         <li>
-          <a href="#">Projeto 01</a>
-        </li>
-        <li>
-          <a href="#">Projeto 02</a>
+          <a href="https://alinesimoncello.github.io/LoginPage/">Projeto 02</a>
         </li>
       </ul>
       <div id="social-links">
@@ -50,9 +50,11 @@
           <ion-icon name="logo-linkedin"></ion-icon
         ></a>
       </div>
-      <footer>Feito por Aline Simoncello <ion-icon name="heart"></ion-icon> No discover da Rocketseat</footer>
+      <footer>
+        Feito por Aline Simoncello <ion-icon name="heart"></ion-icon> No
+        discover da Rocketseat
+      </footer>
     </div>
-
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
